# leaper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/scenes/: demo.json  l
assets/scripts/: demo.json  player.lua
engine/editor/: CMakeLists.txt  editor_layer.cpp  editor_layer.h  launcher.cpp  launcher.h  main.cpp
engine/editor/panels/: console.cpp  console.h  content_broswer.cpp  content_broswer.h  hierarchy.cpp  hierarchy.h  project.cpp  project.h
engine/resource/fonts/lxgw-wenkai/: OFL.txt
engine/resource/shaders/: circle.fs  circle.glsl  circle.vs  depth_map.glsl  line.glsl  line.vs  quad.glsl  quad.vs  skybox.glsl  sprite.vs
engine/resource/shaders/3d/: cube.fs  cube.vs  model.frag  model.glsl  model.vert
engine/runtime/: CMakeLists.txt  leaper.h  lppch.h
engine/runtime/core/: base.h  leap_profiler.hpp  log.cpp  log.h  time.cpp  time.h
engine/runtime/core/events/: application_event.h  events.h  key_event.h  mouse_event.h
engine/runtime/core/layer/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
engine/runtime/core/math/: math.cpp  math.h  uuid.cpp  uuid.h
engine/runtime/function/animation/: animator.h
engine/runtime/function/application/: application.cpp  application.h  window.cpp  window.h
engine/runtime/function/ecs/: components.h  components.hpp  entity.h  entt.hpp  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.h
engine/runtime/function/ecs/systems/: system.h
engine/runtime/function/ecs/systems/audio/: audio_system.cpp  audio_system.h
engine/runtime/function/ecs/systems/physics_system/: contact_listener.cpp  contact_listener.h  physics2d_system.cpp  physics2d_system.h
engine/runtime/function/ecs/systems/render_system/: animation2d_system.cpp  animation2d_system.h  render_system.cpp  render_system.h
engine/runtime/function/ecs/systems/script_system/: lua_script_system.cpp  lua_script_system.h  navite_script_system.cpp  navite_script_system.h
engine/runtime/function/imgui/: imgui_layer.cpp  imgui_layer.h  ui.cpp  ui.h
engine/runtime/function/input/: input.cpp  input.h  key_codes.h  mouse_codes.h
engine/runtime/function/project/: project.cpp  project.h
engine/runtime/function/render/: buffers.cpp  buffers.h  camera_controller.cpp  camera_controller.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  game_camera.cpp  game_camera.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h  perspective_camera_controller.cpp  perspective_camera_controller.h  render_api.cpp  render_api.h  render_command.cpp  render_command.h  renderer2d.cpp  renderer2d.h  renderer3d.cpp  renderer3d.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
engine/runtime/function/render/3d/: mesh.cpp  mesh.h  model.cpp  model.h
engine/runtime/function/scripting/: lua_binder.cpp  lua_binder.h  lua_components_binder.cpp  lua_components_binder.h  lua_entity_binder.cpp  lua_entity_binder.h  lua_globals_binder.cpp  lua_globals_binder.h  lua_maths_binder.cpp  lua_maths_binder.h
engine/runtime/function/task/: render_task_cunsumer.cpp  render_task_cunsumer.h  render_task_producer.cpp  render_task_producer.h  render_task_queue.cpp  render_task_queue.h  render_task_types.h  task_commands.h
engine/runtime/function/utils/: platform_utils.h
engine/runtime/platform/opengl/: opengl_buffers.cpp  opengl_buffers.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_input.cpp  opengl_input.h  opengl_native_shader.cpp  opengl_native_shader.h  opengl_render_api.cpp  opengl_render_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_uniform_buffer.cpp  opengl_uniform_buffer.h  opengl_vertex_array.cpp  opengl_vertex_array.h  stb_image.h
engine/runtime/platform/windows/: windows_platform_utils.cpp  windows_window.cpp  windows_window.h
engine/runtime/resource/: gpu_resource_mapper.cpp  gpu_resource_mapper.h  shader_library.cpp  shader_library.h
examples/travel_in_space/: travel_in_space.lpproject
